[gd_scene load_steps=69 format=2]

[ext_resource path="res://Assets/Sprites/NekoSlime/neko_slime_punch.png" type="Texture" id=1]
[ext_resource path="res://Assets/Dialogues/Dialogue.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/Scenes/NekoSlime/npc_dialogue.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sprites/NekoSlime/neko_slime_forward_jump.png" type="Texture" id=4]
[ext_resource path="res://Assets/Scenes/NekoSlime/nekoSlime.gd" type="Script" id=5]
[ext_resource path="res://Assets/Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Scenes/Player/ProjectilePlayer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Sprites/NekoSlime/neko_slime.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprites/NekoSlime/neko_slime_walk.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprites/NekoSlime/neko_slime_spit.png" type="Texture" id=10]

[sub_resource type="RectangleShape2D" id=35]

[sub_resource type="AtlasTexture" id=42]
atlas = ExtResource( 8 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 4 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 4 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 4 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 4 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 4 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 4 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 640, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 1 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 1 )
region = Rect2( 1280, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 1 )
region = Rect2( 1408, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=53]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=54]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=55]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=56]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=57]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=58]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=59]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=60]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=61]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 512, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=62]
flags = 4
atlas = ExtResource( 10 )
region = Rect2( 576, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=43]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=44]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=45]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 256, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=46]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 384, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=47]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 512, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=48]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 640, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=49]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 768, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=50]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 896, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=51]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1024, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=52]
flags = 4
atlas = ExtResource( 9 )
region = Rect2( 1152, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=31]
animations = [ {
"frames": [ SubResource( 42 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": false,
"name": "jumpAway",
"speed": 25.0
}, {
"frames": [ SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": true,
"name": "punch",
"speed": 15.0
}, {
"frames": [ SubResource( 53 ), SubResource( 54 ), SubResource( 55 ), SubResource( 56 ), SubResource( 57 ), SubResource( 58 ), SubResource( 59 ), SubResource( 60 ), SubResource( 61 ), SubResource( 62 ) ],
"loop": false,
"name": "spit",
"speed": 20.0
}, {
"frames": [ SubResource( 43 ), SubResource( 44 ), SubResource( 45 ), SubResource( 46 ), SubResource( 47 ), SubResource( 48 ), SubResource( 49 ), SubResource( 50 ), SubResource( 51 ), SubResource( 52 ) ],
"loop": true,
"name": "walk",
"speed": 20.0
} ]

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 3.5, 2 )

[sub_resource type="DynamicFont" id=39]
font_data = ExtResource( 6 )

[sub_resource type="DynamicFont" id=40]
size = 23
font_data = ExtResource( 6 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 96, 77 )

[sub_resource type="CircleShape2D" id=37]
radius = 218.0

[sub_resource type="RectangleShape2D" id=38]
extents = Vector2( 41.5, 4 )

[sub_resource type="DynamicFont" id=34]
size = 26
font_data = ExtResource( 6 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jumpAway" ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:offset")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Dialogue/Tooltip:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FistHitbox3/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("DialogueDetection/NewDialogue:rect_position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 16, -38 ) ]
}

[sub_resource type="Animation" id=32]
resource_name = "jumpAway"
step = 0.066
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.066, 0.132, 0.198, 0.264, 0.33, 0.396, 0.462, 0.528, 0.594, 0.66, 0.726, 0.792, 0.858, 0.924, 0.99 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "jumpAway" ]
}

[sub_resource type="Animation" id=41]
resource_name = "newDialogueBounce"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("DialogueDetection/NewDialogue:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 16, -38 ), Vector2( 16, -50 ), Vector2( 16, -38 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dialogue/Tooltip:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=3]
resource_name = "punch"
step = 0.083
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.083, 0.166, 0.249, 0.332, 0.415, 0.498, 0.581, 0.664, 0.747, 0.83, 0.913, 0.996 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 31, -53 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:animation")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "punch" ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:flip_h")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("FistHitbox3/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.415, 0.664 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath(".:isPunching")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.996 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=33]
resource_name = "showTooltip"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Dialogue/Tooltip:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Dialogue/Tooltip:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="nekoSlime" type="KinematicBody2D"]
pause_mode = 2
z_index = -2
collision_layer = 0
script = ExtResource( 5 )
projectileTemplate = ExtResource( 7 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 35 )

[node name="Sprite" type="AnimatedSprite" parent="."]
modulate = Color( 0.372549, 0.372549, 0.372549, 1 )
frames = SubResource( 31 )
animation = "jumpAway"
offset = Vector2( 0, -20 )

[node name="GroundDetection1" type="Area2D" parent="."]
position = Vector2( 28, 20 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="GroundDetection1"]
shape = SubResource( 36 )

[node name="DialogueDetection" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2
script = ExtResource( 3 )

[node name="Label" type="Label" parent="DialogueDetection"]
visible = false
modulate = Color( 0.372549, 0.372549, 0.372549, 1 )
margin_left = -15.0
margin_top = -30.0
margin_right = 25.0
margin_bottom = -16.0
custom_fonts/font = SubResource( 39 )
text = "(E)"
align = 1

[node name="NewDialogue" type="Label" parent="DialogueDetection"]
modulate = Color( 0.564706, 0.564706, 0.564706, 1 )
margin_left = 16.0
margin_top = -38.0
margin_right = 56.0
margin_bottom = -10.0
custom_colors/font_color = Color( 0, 0.882353, 1, 1 )
custom_fonts/font = SubResource( 40 )
text = "!"

[node name="CollisionShape2D" type="CollisionShape2D" parent="DialogueDetection"]
position = Vector2( 0, -0.5 )
shape = SubResource( 1 )

[node name="EnemyDetection2" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetection2"]
shape = SubResource( 37 )

[node name="FistHitbox3" type="Area2D" parent="."]
position = Vector2( 0, -6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="FistHitbox3"]
position = Vector2( 52.5, 0 )
shape = SubResource( 38 )
disabled = true

[node name="Dialogue" parent="." instance=ExtResource( 2 )]

[node name="Tooltip" type="Label" parent="Dialogue"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_top = 0.05
anchor_right = 1.0
anchor_bottom = 0.05
margin_bottom = 14.0
custom_colors/font_color = Color( 1, 0.972549, 0.54902, 1 )
custom_fonts/font = SubResource( 34 )
align = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "newDialogueBounce"
anims/RESET = SubResource( 2 )
anims/jumpAway = SubResource( 32 )
anims/newDialogueBounce = SubResource( 41 )
anims/punch = SubResource( 3 )
anims/showTooltip = SubResource( 33 )

[node name="HasShotTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="DelayedDialogueTimer" type="Timer" parent="."]
pause_mode = 1
wait_time = 1.3
one_shot = true

[connection signal="body_entered" from="DialogueDetection" to="DialogueDetection" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="DialogueDetection" to="DialogueDetection" method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="EnemyDetection2" to="." method="_on_EnemyDetection2_body_entered"]
[connection signal="body_entered" from="FistHitbox3" to="." method="_on_FistHitbox3_body_entered"]
[connection signal="dialogueFinished" from="Dialogue" to="." method="_on_Dialogue_dialogueFinished"]
[connection signal="timeout" from="HasShotTimer" to="." method="_on_HasShotTimer_timeout"]
[connection signal="timeout" from="DelayedDialogueTimer" to="." method="_on_DelayedDialogueTimer_timeout"]
